<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/log_bar"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/app_logo"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_70sdp"/>
    <RelativeLayout
        android:id="@+id/rv_translator"
        android:layout_below="@+id/log_bar"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:background="@color/bar_navigration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dollar_text"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginLeft="@dimen/_15sdp"
            android:textColor="@color/black"
            android:text="@string/translation_dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/dollar_usd"
            android:fontFamily="@font/poppins_regular"
            android:layout_toRightOf="@+id/dollar_text"
            android:layout_marginLeft="@dimen/_5sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/us_dollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/dollarUsd"
            android:fontFamily="@font/poppins_regular"
            android:layout_toRightOf="@+id/dollar_usd"
            android:layout_marginLeft="@dimen/_5sdp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/usDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <ScrollView
        android:layout_marginBottom="@dimen/_100sdp"
        android:layout_below="@+id/rv_translator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-127dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rv_orderNow"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/orderNowImage"
                android:background="@drawable/order_now_icon"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>
              <TextView
                  android:id="@+id/orderNow_text"
                  android:textStyle="bold"
                  android:fontFamily="@font/poppins_regular"
                  android:layout_marginLeft="@dimen/_10sdp"
                  android:textColor="@color/black"
                  android:textSize="@dimen/_14sdp"
                  android:layout_toRightOf="@+id/orderNowImage"
                  android:text="@string/order_now"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/orderNow_textSmall"
                android:fontFamily="@font/poppins_regular"
                android:layout_below="@+id/orderNow_text"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/navbar_text"
                android:textSize="@dimen/_12sdp"
                android:layout_toRightOf="@+id/orderNowImage"
                android:text="@string/if_you_know_how_many_pages_you_have"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rv_submitAQuote"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_below="@+id/rv_orderNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/submitAQuoteImage"
                android:background="@drawable/submit_quote"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>
            <TextView
                android:id="@+id/submitAQuote_text"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:layout_toRightOf="@+id/submitAQuoteImage"
                android:text="@string/submitAQuote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/submitAQuote_textSmall"
                android:fontFamily="@font/poppins_regular"
                android:layout_below="@+id/submitAQuote_text"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/navbar_text"
                android:textSize="@dimen/_12sdp"
                android:layout_toRightOf="@+id/submitAQuoteImage"
                android:text="@string/if_you_unsure_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rv_job"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_below="@+id/rv_submitAQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/jobImage"
                android:background="@drawable/jobs"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>
            <TextView
                android:id="@+id/jobImage_text"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:layout_toRightOf="@+id/jobImage"
                android:text="@string/jobs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/jobImage_textSmall"
                android:fontFamily="@font/poppins_regular"
                android:layout_below="@+id/jobImage_text"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/navbar_text"
                android:textSize="@dimen/_12sdp"
                android:layout_toRightOf="@+id/jobImage"
                android:text="@string/list_of_my_Order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rv_MyAccount"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_below="@+id/rv_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/MyAccountImage"
                android:background="@drawable/my_account"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>
            <TextView
                android:id="@+id/MyAccount_text"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:layout_toRightOf="@+id/MyAccountImage"
                android:text="@string/my_Account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
               <ImageView
                   android:id="@+id/imageView_dawn_arrow"
                   android:visibility="gone"
                   android:layout_marginEnd="@dimen/_10sdp"
                   android:background="@drawable/baseline_keyboard_arrow_down_24"
                   android:layout_alignParentEnd="true"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/imageView_up_arrow"
                android:visibility="gone"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/baseline_keyboard_arrow_up_24"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/MyAccount_textSmall"
                android:fontFamily="@font/poppins_regular"
                android:layout_below="@+id/MyAccount_text"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/navbar_text"
                android:textSize="@dimen/_12sdp"
                android:layout_toRightOf="@+id/MyAccountImage"
                android:text="@string/manage_Personal_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:id="@+id/my_account_list"
                android:layout_below="@+id/MyAccount_textSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rv_TrackOrder"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_below="@+id/rv_MyAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/TrackOrderImage"
                android:background="@drawable/track_order"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>
            <TextView
                android:id="@+id/TrackOrder_text"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:layout_toRightOf="@+id/TrackOrderImage"
                android:text="@string/track_Order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/TrackOrder_textSmall"
                android:fontFamily="@font/poppins_regular"
                android:layout_below="@+id/TrackOrder_text"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/navbar_text"
                android:textSize="@dimen/_12sdp"
                android:layout_toRightOf="@+id/TrackOrderImage"
                android:text="@string/keep_track_of_your_Order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rv_UserManagement"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_below="@+id/rv_TrackOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/UserManagementImage"
                android:background="@drawable/user_management"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>
            <TextView
                android:id="@+id/UserManagement_text"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:layout_toRightOf="@+id/UserManagementImage"
                android:text="@string/user_Management"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/UserManagement_textSmall"
                android:fontFamily="@font/poppins_regular"
                android:layout_below="@+id/UserManagement_text"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/navbar_text"
                android:textSize="@dimen/_12sdp"
                android:layout_toRightOf="@+id/UserManagementImage"
                android:text="@string/add_Manage_User"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rv_SignOut"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_below="@+id/rv_UserManagement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/SignOutImage"
                android:background="@drawable/sign_out"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"/>
            <TextView
                android:id="@+id/SignOut_text"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:layout_toRightOf="@+id/SignOutImage"
                android:text="@string/sign_Out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/SignOut_textSmall"
                android:fontFamily="@font/poppins_regular"
                android:layout_below="@+id/SignOut_text"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/navbar_text"
                android:textSize="@dimen/_12sdp"
                android:layout_toRightOf="@+id/SignOutImage"
                android:text="@string/logout_from_this_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>
    </RelativeLayout>
    </ScrollView>
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/navi_bar"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bar_view_line" />
        <TextView
            android:id="@+id/appName"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/appNames"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/navbar_bottom_text"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/appVersion"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_12sdp"
            android:text="@string/appVersion"
            android:textColor="@color/navbar_bottom_text"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>